--- a/com.sevenmartsupermarket/test-output/old/Default suite/groups.html
+++ b/com.sevenmartsupermarket/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>LoginTest.verifyValidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]<br/></td></tr>
+</table>
