--- a/com.sevenmartsupermarket/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.sevenmartsupermarket/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d91f3">  <td>24/05/17 16:34:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PushNotificationTest.enterProductDetails()[pri:0, instance:com.sevenmartsupermarket.base.PushNotificationTest@4116aac9]">enterProductDetails</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="658f60">  <td>24/05/17 16:34:09</td>   <td>-11537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:com.sevenmartsupermarket.base.PushNotificationTest@4116aac9]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>24/05/23 17:30:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>24/05/23 17:30:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>24/05/23 17:30:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.launchBrowser()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>24/05/23 17:30:45</td>   <td>16643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.terminateBrowser(org.testng.ITestResult)[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">&lt;&lt;terminateBrowser</td> 
+<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>24/05/23 17:30:45</td>   <td>16643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.terminateBrowser(org.testng.ITestResult)[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">&lt;&lt;terminateBrowser</td> 
+<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="658f60">  <td>24/05/23 17:30:45</td>   <td>16643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.terminateBrowser(org.testng.ITestResult)[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">&lt;&lt;terminateBrowser</td> 
+<td>&nbsp;</td>  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="9d91f3">  <td>24/05/23 17:30:44</td>   <td>15815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyValidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">verifyValidUserLogin</td> 
+  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="9d91f3">  <td>24/05/23 17:30:44</td>   <td>15815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyValidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">verifyValidUserLogin</td> 
+  <td>main@255334292</td>   <td></td> </tr>
+<tr bgcolor="9d91f3">  <td>24/05/23 17:30:44</td>   <td>15815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyValidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]">verifyValidUserLogin</td> 
+  <td>main@255334292</td>   <td></td> </tr>
 </table>
