--- a/com.sevenmartsupermarket/test-output/old/Default suite/methods-not-run.html
+++ b/com.sevenmartsupermarket/test-output/old/Default suite/methods-not-run.html
@@ -1,7 +1,4 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.sevenmartsupermarket.base.PushNotificationTest.usernameExistAlert</td></tr>
-<tr><td>com.sevenmartsupermarket.base.PushNotificationTest.checkingExcel</td></tr>
-<tr><td>com.sevenmartsupermarket.base.PushNotificationTest.checkProfileName</td></tr>
-<tr><td>com.sevenmartsupermarket.base.PushNotificationTest.verifySendNotification</td></tr>
-<tr><td>com.sevenmartsupermarket.base.PushNotificationTest.addUserAdminInformations</td></tr>
+<tr><td>com.sevenmartsupermarket.base.LoginTest.verifyInvalidUserLogin</td></tr>
+<tr><td>com.sevenmartsupermarket.base.LoginTest.verify_Login</td></tr>
 </table>
