--- a/com.sevenmartsupermarket/test-output/old/Default suite/groups.html
+++ b/com.sevenmartsupermarket/test-output/old/Default suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>LoginTest.verifyValidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@489115ef]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>sanity</td><td>LoginTest.verifyInvalidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@74e52ef6]<br/>LoginTest.verify_Login()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@74e52ef6]<br/></td></tr>
+<tr><td>smoke</td><td>LoginTest.verifyInvalidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@74e52ef6]<br/>LoginTest.verifyValidUserLogin()[pri:0, instance:com.sevenmartsupermarket.base.LoginTest@74e52ef6]<br/></td></tr>
 </table>
